--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="http://fonts.cdnfonts.com/css/clash-display" rel="stylesheet" />
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=clash-display@700,500,600&display=swap"
+      rel="stylesheet"
+    />
 
     <title>React App</title>
   </head>
